--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -43,7 +43,7 @@ textarea {
   padding: 0.75rem 1rem;
   resize: none;
   border: none;
-  background-color: #f5f5f5;
+  background-color: var(--gray-light);
 }
 
 .noteField {
