--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,5 +1,5 @@
 footer {
-  margin-top: 5rem;
+  margin-top: 2rem;
   height: 10vh;
   background-color: var(--tan);
   display: flex;
